external-crates/move/move-compiler/tests/move_2024/parser/signature_keyword.move
module a::m {
    struct signature<T> { t: T }
}
